Implement restaurants_list path
